[gd_scene load_steps=4 format=3 uid="uid://vpaulyo4jcq5"]

[ext_resource type="Script" uid="uid://dwdjjv37ta7vx" path="res://Scenes/DialogueUI.gd" id="1_ot2p7"]
[ext_resource type="Texture2D" uid="uid://bh2jup1w3as0b" path="res://Image/Background/TestBackground.png" id="2_w6krc"]
[ext_resource type="Texture2D" uid="uid://d15wrpr8bby8v" path="res://Image/Characters/Icacius/image-removebg-preview(6).png" id="3_8gqem"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ot2p7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1282.0
offset_bottom = 790.0
texture = ExtResource("2_w6krc")

[node name="CharacterSprite" type="Sprite2D" parent="."]
position = Vector2(598, 313)
scale = Vector2(0.7, 0.651)
texture = ExtResource("3_8gqem")

[node name="TextboxPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 385.0
offset_right = 1135.0
offset_bottom = 626.0

[node name="NameLabel" type="Label" parent="TextboxPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = -59.0
offset_right = 193.0
offset_bottom = -3.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "{{NAME}}"

[node name="DialogueLabel" type="RichTextLabel" parent="TextboxPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 20.0
offset_right = 1052.0
offset_bottom = 219.0

[node name="choice_box" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 507.0
offset_top = 103.0
offset_right = 547.0
offset_bottom = 143.0
